unpackaged/main/default/objects/joinapi__Join_Process__c/joinapi__Join_Process__c.object-meta.xml
<CustomObject>
    <description>The controlling object for join processes.</description>
    <label>Join Process</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Join Process Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Join Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>