unpackaged/main/default/objects/joinapi__Join_Process__c/fields/joinapi__Enable_Access_Permissions__c.field-meta.xml
<CustomField>
    <fullName>joinapi__Enable_Access_Permissions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked the join process will be restricted to only those contacts that have the defined badges.</description>
    <inlineHelpText>When checked the join process will be restricted to only those contacts that have the defined badges.</inlineHelpText>
    <label>Enable Access Permissions</label>
    <type>Checkbox</type>
</CustomField>