unpackaged/main/default/objects/joinapi__Join_Process__c/fields/joinapi__Join_Process_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>joinapi__Join_Process_Display_Name__c</fullName>
    <description>The name that will be presented at the top of the page.</description>
    <inlineHelpText>The name that will be presented at the top of the page.</inlineHelpText>
    <label>Join Process Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>