unpackaged/main/default/objects/joinapi__Join_Process__c/fields/joinapi__Landing_Url__c.field-meta.xml
<CustomField>
    <fullName>joinapi__Landing_Url__c</fullName>
    <description>** System Calculated ** The landing Url calculated from the first step</description>
    <inlineHelpText>** System Calculated ** The landing Url calculated from the first step</inlineHelpText>
    <label>Landing Url</label>
    <type>Url</type>
</CustomField>