unpackaged/main/default/objects/joinapi__Join_Process__c/listViews/joinapi__All.listView-meta.xml
<ListView>
    <fullName>joinapi__All</fullName>
    <columns>NAME</columns>
    <columns>joinapi__Join_Process_Display_Name__c</columns>
    <columns>joinapi__Is_Published__c</columns>
    <columns>joinapi__Enable_Access_Permissions__c</columns>
    <columns>joinapi__Landing_Url__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>